--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ openai>=1.0.0
 # Visualization
 plotly>=5.17.0
 matplotlib>=3.7.0
+kaleido>=0.2.1
 
 # Scientific computing
 numpy>=1.24.0
@@ -16,3 +17,4 @@ scipy>=1.11.0
 
 # Additional utilities
 python-dotenv>=1.0.0
+openpyxl>=3.1.0
